# py_hub_sore2

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  manage.py  pyproject.toml
carts/: admin.py  mixins.py  models.py  urls.py  utils.py  views.py
carts/migrations/: 0001_initial.py
carts/templates/carts/includes/: included_cart.html
carts/templatetags/: carts_tags.py
fixtures/goods/: cats.json  prod.json
fixtures/orders/: orders.json
fixtures/users/: users.json
goods/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
goods/migrations/: 0001_initial.py  0002_alter_products_options.py
goods/templates/goods/: catalog.html  product.html
goods/templatetags/: goods_tags.py
main/: urls.py  views.py
main/templates/main/: about.html  base.html  index.html
orders/: admin.py  forms.py  models.py  views.py
orders/migrations/: 0001_initial.py
orders/templates/orders/: create_order.html
store/: settings.py  urls.py
templates/: base.html
templates/includes/: cart_button.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_phone_number.py
users/templates/users/: login.html  profile.html  registration.html  user_carts.html
