[tool.poetry]
name = "py-hub-sore2"
version = "0.1.0"
description = ""
authors = ["k.barylnikov <ipt_git_bot@ipt.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2"
pillow = "^10.4.0"
psycopg = "^3.2.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"
django-debug-toolbar = "^4.4.6"
ruff = "^0.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
